--- a/SensorApp/wear/src/main/res/values/strings.xml
+++ b/SensorApp/wear/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
     -->
-    <string name="hello_world">Hello Square World!</string>
+    <string name="hello_world">Tutorial App</string>
+    <string name="accel_label">Accel</string>
+    <string name="gyro_label">Gyro</string>
+    <string name="start">START</string>
+    <string name="stop">STOP</string>
 </resources>
