--- a/SensorApp/mobile/src/main/res/values/strings.xml
+++ b/SensorApp/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SensorApp</string>
+    <string name="channel_name">Notification</string>
+    <string name="channel_description">Description</string>
 </resources>
